[gd_scene load_steps=30 format=2]

[ext_resource path="res://Components/Textures/back1.png" type="Texture" id=1]
[ext_resource path="res://Components/Textures/back2.png" type="Texture" id=2]
[ext_resource path="res://Components/Textures/Button1.png" type="Texture" id=3]
[ext_resource path="res://Components/Textures/Screen.png" type="Texture" id=4]
[ext_resource path="res://Components/Textures/Button2.png" type="Texture" id=5]
[ext_resource path="res://Components/Fonts/basis33.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Source/Tablet.tres" type="Theme" id=7]
[ext_resource path="res://Components/Fonts/dogica.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Components/Tablet.gd" type="Script" id=9]
[ext_resource path="res://Components/Textures/Lines.png" type="Texture" id=10]
[ext_resource path="res://Components/Fonts/dogicaStrikethrough.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Components/species.gd" type="Script" id=12]
[ext_resource path="res://Art/Sprites/veinerWorm2.png" type="Texture" id=13]
[ext_resource path="res://Components/swype.gd" type="Script" id=14]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 300, 200 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 300, 200 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 600, 0, 300, 200 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 900, 0, 300, 200 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="DynamicFont" id=8]
size = 8
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=6]
extra_spacing_bottom = -1
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=7]
size = 8
extra_spacing_top = 1
font_data = ExtResource( 8 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 300, 200 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 10 )
region = Rect2( 300, 0, 300, 200 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 10 )
region = Rect2( 600, 0, 300, 200 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 10 )
region = Rect2( 900, 0, 300, 200 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="Tablet" type="Node2D"]
script = ExtResource( 9 )

[node name="Screen" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
frame = 3
playing = true
centered = false

[node name="BackButton" type="TextureButton" parent="Screen"]
margin_left = 15.0
margin_top = 83.0
margin_right = 48.0
margin_bottom = 94.0
rect_rotation = 90.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainScreen" type="ScrollContainer" parent="."]
margin_left = 20.0
margin_top = 7.0
margin_right = 292.0
margin_bottom = 193.0
rect_min_size = Vector2( 109, 157 )
theme = ExtResource( 7 )
scroll_horizontal_enabled = false
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen"]
margin_right = 271.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="RichTextLabel" parent="MainScreen/VBoxContainer"]
margin_right = 271.0
margin_bottom = 13.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 7 )
custom_colors/default_color = Color( 0.309804, 0.501961, 0.627451, 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="MainScreen/VBoxContainer"]
margin_top = 17.0
margin_right = 271.0
margin_bottom = 30.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="describedSpecies" type="RichTextLabel" parent="MainScreen/VBoxContainer"]
margin_top = 34.0
margin_right = 271.0
margin_bottom = 47.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crinoids" type="RichTextLabel" parent="MainScreen/VBoxContainer"]
margin_top = 51.0
margin_right = 271.0
margin_bottom = 64.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="teaLily" type="Button" parent="MainScreen/VBoxContainer"]
margin_top = 68.0
margin_bottom = 80.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 7 )
enabled_focus_mode = 0
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crabTrapCrinoid" type="Button" parent="MainScreen/VBoxContainer"]
margin_top = 84.0
margin_bottom = 96.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 7 )
enabled_focus_mode = 0
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hemichordates" type="RichTextLabel" parent="MainScreen/VBoxContainer"]
margin_top = 100.0
margin_right = 271.0
margin_bottom = 113.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Hemichordata:"
text = "Hemichordata:"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="veinerWorm" type="Button" parent="MainScreen/VBoxContainer"]
margin_top = 117.0
margin_bottom = 129.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 7 )
enabled_focus_mode = 0
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="driftWorm" type="Button" parent="MainScreen/VBoxContainer"]
margin_top = 133.0
margin_bottom = 145.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 7 )
enabled_focus_mode = 0
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mochiDonutGraptolite" type="Button" parent="MainScreen/VBoxContainer"]
visible = false
margin_top = 110.0
margin_bottom = 122.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 7 )
enabled_focus_mode = 0
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chordates" type="RichTextLabel" parent="MainScreen/VBoxContainer"]
margin_top = 149.0
margin_right = 271.0
margin_bottom = 162.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Chordata:"
text = "Chordata:"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="teaCupPikaiid" type="Button" parent="MainScreen/VBoxContainer"]
margin_top = 166.0
margin_bottom = 178.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 7 )
enabled_focus_mode = 0
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="letterBonePikaiid" type="Button" parent="MainScreen/VBoxContainer"]
margin_top = 182.0
margin_bottom = 194.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 7 )
enabled_focus_mode = 0
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lacemouth" type="Button" parent="MainScreen/VBoxContainer"]
visible = false
margin_top = 146.0
margin_bottom = 158.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 7 )
enabled_focus_mode = 0
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slugPikaiid" type="Button" parent="MainScreen/VBoxContainer"]
visible = false
margin_top = 146.0
margin_bottom = 158.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 7 )
enabled_focus_mode = 0
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lesserSlugPikaiid" type="Button" parent="MainScreen/VBoxContainer"]
visible = false
margin_top = 146.0
margin_bottom = 158.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 7 )
enabled_focus_mode = 0
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bigBoyPikaiid" type="Button" parent="MainScreen/VBoxContainer"]
visible = false
margin_top = 178.0
margin_bottom = 190.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 7 )
enabled_focus_mode = 0
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bigBoySlugPikaiid" type="Button" parent="MainScreen/VBoxContainer"]
visible = false
margin_top = 178.0
margin_bottom = 190.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 7 )
enabled_focus_mode = 0
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arthropods" type="RichTextLabel" parent="MainScreen/VBoxContainer"]
visible = false
margin_top = 198.0
margin_right = 271.0
margin_bottom = 211.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="isopodRadiodont" type="Button" parent="MainScreen/VBoxContainer"]
visible = false
margin_top = 146.0
margin_bottom = 158.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 7 )
enabled_focus_mode = 0
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crackerEurypterid" type="Button" parent="MainScreen/VBoxContainer"]
visible = false
margin_top = 146.0
margin_bottom = 158.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 7 )
enabled_focus_mode = 0
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wiggleTrilobite" type="Button" parent="MainScreen/VBoxContainer"]
visible = false
margin_top = 146.0
margin_bottom = 158.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 7 )
enabled_focus_mode = 0
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arthrocaris" type="Button" parent="MainScreen/VBoxContainer"]
visible = false
margin_top = 146.0
margin_bottom = 158.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 7 )
enabled_focus_mode = 0
align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spacer" type="Label" parent="MainScreen/VBoxContainer"]
margin_top = 198.0
margin_right = 271.0
margin_bottom = 204.0
mouse_filter = 1
custom_fonts/font = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Species" type="ScrollContainer" parent="."]
visible = false
margin_left = 20.0
margin_top = 7.0
margin_right = 292.0
margin_bottom = 193.0
rect_min_size = Vector2( 109, 157 )
theme = ExtResource( 7 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Species"]
margin_right = 272.0
margin_bottom = 186.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="RichTextLabel" parent="Species/VBoxContainer"]
margin_right = 272.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/default_color = Color( 0.309804, 0.501961, 0.627451, 1 )
custom_fonts/italics_font = SubResource( 15 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="Species/VBoxContainer"]
margin_top = 20.0
margin_right = 272.0
margin_bottom = 30.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Species/VBoxContainer"]
margin_top = 34.0
margin_right = 272.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/italics_font = SubResource( 16 )
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = "An extremely large
species of [color=#4f80a0]Radiodont[/color] 
found within Miánhua 
cave. It is a slow, 
passive grazer-like 
species. Despite its 
carnivorous diet it 
fills a similar 
ecological niche as a large herbivore. It only feeds on slow moving prey, dead prey, and algae."
text = "An extremely large
species of Radiodont 
found within Miánhua 
cave. It is a slow, 
passive grazer-like 
species. Despite its 
carnivorous diet it 
fills a similar 
ecological niche as a large herbivore. It only feeds on slow moving prey, dead prey, and algae."
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spacer" type="Label" parent="Species/VBoxContainer"]
margin_top = 128.0
margin_right = 272.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="image" type="Sprite" parent="Species/VBoxContainer"]
position = Vector2( 223, 61 )
texture = ExtResource( 13 )

[node name="lines" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.521569 )
frames = SubResource( 13 )
frame = 3
playing = true
centered = false

[connection signal="pressed" from="Screen/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/teaLily" to="MainScreen/VBoxContainer/teaLily" method="_on_species_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/crabTrapCrinoid" to="MainScreen/VBoxContainer/crabTrapCrinoid" method="_on_species_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/veinerWorm" to="MainScreen/VBoxContainer/veinerWorm" method="_on_species_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/driftWorm" to="MainScreen/VBoxContainer/driftWorm" method="_on_species_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/mochiDonutGraptolite" to="MainScreen/VBoxContainer/mochiDonutGraptolite" method="_on_species_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/teaCupPikaiid" to="MainScreen/VBoxContainer/teaCupPikaiid" method="_on_species_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/letterBonePikaiid" to="MainScreen/VBoxContainer/letterBonePikaiid" method="_on_species_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/lacemouth" to="MainScreen/VBoxContainer/lacemouth" method="_on_species_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/slugPikaiid" to="MainScreen/VBoxContainer/slugPikaiid" method="_on_species_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/lesserSlugPikaiid" to="MainScreen/VBoxContainer/lesserSlugPikaiid" method="_on_species_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/bigBoyPikaiid" to="MainScreen/VBoxContainer/bigBoyPikaiid" method="_on_species_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/bigBoySlugPikaiid" to="MainScreen/VBoxContainer/bigBoySlugPikaiid" method="_on_species_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/isopodRadiodont" to="MainScreen/VBoxContainer/isopodRadiodont" method="_on_species_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/crackerEurypterid" to="MainScreen/VBoxContainer/crackerEurypterid" method="_on_species_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/wiggleTrilobite" to="MainScreen/VBoxContainer/wiggleTrilobite" method="_on_species_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/arthrocaris" to="MainScreen/VBoxContainer/arthrocaris" method="_on_species_pressed"]
[connection signal="pressed" from="Species/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
